--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <div id="app"></div>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- babel - to decifer html to js language -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- OLD method (Imperative) -->
     <script type="text/javascript">
       const app = document.getElementById('app');
       const header = document.createElement('h1');
@@ -10,6 +13,15 @@
       const headerContent = document.createTextNode(text);
       header.appendChild(headerContent);
       app.appendChild(header);
+    </script>
+    <!-- NEW Method (Declarative) -->
+    <script type="text/jsx">
+      // get html element - div
+      const app = document.getElementById('app');
+      // method to start / control elements in DOM
+      const root = ReactDOM.createRoot(app);
+      // displaying the element
+      root.render(<h1>Develop. Preview. Ship.</h1>);
     </script>
   </body>
 </html>
